# NoEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Everything.sh  LICENSE  README.md
Assets/: TestAsset.txt
Engine/Include/NoEngine/: Engine.h
Engine/Include/Test/: RunTest.h
Engine/Src/: FixedGlobals.h
Engine/Src/App/: Engine.cpp  Window.cpp  Window.h
Engine/Src/Core/: SDLContext.cpp
Engine/Src/Debug/: NoAssert.h
Engine/Src/Engine/: Engine.cpp  Window.cpp  Window.h
Engine/Src/Renderer/Vulkan/: VulkanInstance.cpp  VulkanInstance.h
Engine/Src/Test/: RunTest.cpp
Libraries/: CMakeLists.txt  CMakePresets.json
NoEditor/: CMakeLists.txt
NoEditor/Include/NoUI/: NoUI.h
NoEditor/Src/: NoEditor.cpp  Test.cpp
NoEditor/Src/NoUI/: NoUI.cpp
NoEngine/Include/NoDebug/: Log.h
NoEngine/Src/: FixedGlobals.h
NoEngine/Src/Core/: SDLContext.h
NoEngine/Src/Debug/: EngineLog.h  LogImpl.cpp  NoAssert.h
NoEngine/Src/Engine/: Engine.cpp  Window.cpp
NoEngine/Src/Renderer/Vulkan/: VulkanInstance.cpp
SodaCan/: CMakeLists.txt
SodaCan/Src/: SodaCan.cpp
SodaEngine/Include/SDDebug/: Log.h
SodaEngine/Include/SDEngine/: Engine.h
SodaEngine/Include/Test/: RunTest.h
SodaEngine/Src/: FixedGlobals.h
SodaEngine/Src/Core/: SDLContext.cpp  SDLContext.h
SodaEngine/Src/Debug/: EngineLog.h  LogImpl.cpp  SDAssert.h
SodaEngine/Src/Engine/: Engine.cpp  Window.cpp  Window.h
SodaEngine/Src/Renderer/Vulkan/: VulkanInstance.cpp  VulkanInstance.h
SodaEngine/Src/Test/: RunTest.cpp
_DevFiles/Docs/: Globals.md  Libraries.md  README.md
_DevFiles/Docs/Building/: BuildStructure.md  Config.md
_DevFiles/Docs/Code/: CodeStructure.md  CompileDefinitions.md  Graphics.md  Initialization.md  Namespaces.md  Prefix.md
_DevFiles/Docs/Debugging/: Asserts.md  Logging.md
_DevFiles/Docs/Namespaces/: Namespaces.md
